# vibeiseven

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/: checker.py
vibeiseven/: __init__.py  checker.py
