[project]
name = "vibeiseven"
version = "0.1.0"
description = "Checks if number is even"
readme = "README.md"
authors = [
    { name= "Schellcunn" }
]
requires-python = ">=3.13.5"
dependencies = [
    "openai>=1.95.1",
    "pydantic>=2.11.7",
    "typing-extensions>=4.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

